--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">LifestyleHUB</string>
-    <string name="title_currentweather">Current Weather</string>
+    <string name="app_name" translatable="false">LifestyleHUB</string>
+    <string name="home">Home</string>
+    <string name="leisure">Your leisure</string>
+    <string name="profile">Profile</string>
 </resources>
