--- a/androidBase/src/main/res/values/strings.xml
+++ b/androidBase/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="location_denied">Location access denied</string>
     <string name="network_error">Network error</string>
     <string name="something_went_wrong">Something went wrong…</string>
+    <string name="sign_in">Sign in</string>
+    <string name="sign_up">Sign up</string>
 </resources>
